--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -4,6 +4,9 @@ a.footnote {
 	text-decoration: none;
 }
 
+h4{ position:relative; }
+h4 span.anchor{ position:absolute; top:-64px;}
+
 h4, h3, h2{
 	margin-bottom: 0;
 }
