--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,6 @@
         <TextView android:id="@+id/tv"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:text="Hello World!" />
+            android:text="Result will be placed here" />
     </ScrollView>
 </LinearLayout>
