--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
     android:orientation="vertical"
     tools:context="masterproject.studentAtUniversityKiel.knauf.torsten.metos3dPrototyp.MainActivity">
 
+    <Button android:id="@+id/editOption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Options"/>
     <Button android:id="@+id/startMetos3d"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +21,7 @@
         <TextView android:id="@+id/tv"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:text="Result will be placed here" />
+            android:text="Result will be placed here"
+            android:freezesText="true"/>
     </ScrollView>
 </LinearLayout>
