--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <Button android:id="@+id/startMetos3d"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start N-DOP"/>
+        android:text="Start Calculation"/>
     <ScrollView android:id="@+id/textAreaScroller"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
